# wago750_315_

./: .gitignore  readme.md
c_win/: Makefile  crc.c  crc.h  main.c  wago.c  wago.h
cpp_win/: Makefile  main.cpp  wago750.cpp  wago750.h
csharp/: Makefile  main.cs  wago750.cs
csharp_gui/: gui.sln  using_sharpdevelop.md
csharp_gui/gui/: CommandThread.cs  MainForm.Designer.cs  MainForm.cs  Program.cs  Wago750.cs  gui.csproj  gui.sln
csharp_gui/gui/Properties/: AssemblyInfo.cs
golang/: go.mod  go.sum  main.go  using_go.md
python/: example.py  wago.py
rust/wago750/: Cargo.toml
rust/wago750/src/: main.rs  wago.rs
rust/wago750/src/wago/: modbus_checksum.rs
