[package]
name = "wago750"
version = "0.1.0"
authors = ["yadaniel <ya.daniel@inbox.ru>"]
edition = "2018"

[dependencies]
serial = "0.4.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

#0: no optimizations
#1: basic optimizations
#2: some optimizations
#3: all optimizations
#s: optimize for binary size
#z: optimize for binary size, but also turn off loop vectorization.

